--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ishiduca/doujinshop-meta-search-service-ec-toranoana-jp-joshi",
-  "version": "0.0.1",
+  "name": "doujinshop-meta-search-service-ec-toranoana-jp-joshi",
+  "version": "0.0.2",
   "description": "",
   "main": "service.js",
   "scripts": {
